--- a/style_back.css
+++ b/style_back.css
@@ -144,7 +144,7 @@ header .ham-burger.active span:nth-child(2){
 /*Home section*/
 .home{
 	height: 100vh;
-	background-image: url('../images/home.jpg');
+	background-image: url('back/cover.jpg');
 	background-size: cover;
 	padding:15px;
 	-webkit-display: flex;
